# segmentation-service-prototype

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md
.github/workflows/: ci.yaml
dispatcher/: CMakeLists.txt  Dockerfile  README.md
dispatcher/include/: gdal_image_loader.h  gdal_image_saver.h  scene_inferencer.h  service.h  triton_client.h  worker_thread.h
dispatcher/src/: gdal_image_loader.cpp  gdal_image_saver.cpp  main.cpp  scene_inferencer.cpp  service.cpp  triton_client.cpp  worker_thread.cpp
helm/: Chart.yaml  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  knative-service.yaml  pv.yaml  pvc.yaml  service.yaml
helm/templates/tests/: test-connection.yaml
infrastructure/: README.md
infrastructure/script/: knative-setup.sh
infrastructure/terraform/: .terraform.lock.hcl  README.md  main.tf
patch-server/: Dockerfile  README.md  setup.py
patch-server/segtriton/: __init__.py  segmentor.py  server.py
